fix(nav): adds padding and alignment to drop down menu

--- a/src/navMenu/styles.css
+++ b/src/navMenu/styles.css
@@ -39,8 +39,7 @@
   & .list {
     list-style: none;
     margin: 0;
-    padding: 0;
-    padding-bottom: 3vw;
+    padding: 3rem;
     justify-content: start;
     gap: 2rem;
     max-width: 900px;
@@ -53,6 +52,7 @@
     right: 100vw;
     display: flex;
     flex-direction: column;
+    align-items: start;
     z-index: -2;
   }
 
@@ -80,6 +80,7 @@
       position: static;
       display: flex;
       flex-direction: row;
+      justify-content: center;
       transform: none;
       transition-duration: 0ms;
       z-index: auto;
